--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
 
+        <script src="jquery-3.7.1.min.js"></script>
+
+        <!-- Import the styles & scripts  -->
+<script src="cookiebanner.script.js"></script>
+<link rel="stylesheet" href="cookiebanner.style.css">
+
+<!-- Initialize Cookie Notice  -->
+<script>
+$(document).ready(function() {
+    cookiebanner.init();
+});     
+</script>
+
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-89YY3TFDS8"></script>
