--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <body>
 
         <h1>Home</h1>
+        <p>This site is still under development. YOu might see random things appear.</p>
         
         
         <!-- Load external JavaScript -->
