--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-
+        <link rel="stylesheet" href="styles.css">
         <title>Survival Site</title>
 
         <!-- jQuery -->
