--- a/psychology.html
+++ b/psychology.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <!--Google tag here-->
+    <title>Psychology</title>
+  </head>
+  <body>
+    <h1>Psycology</h1>
+  </body>
+</html>
