--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 
         <h1>Home</h1>
         <p>This site is still under development. YOu might see random things appear.</p>
-        <h2><a href=/pschology.html target="_blank">Psychology</a></h2>
-        <h2><a href=/how-to-build-a-survival-kit.html target="_blank">Survival Kit</a></h2>
-        <h2><a href=/survival-medicine.html target="_blank">Survival Medicines</a></h2>
-        <h2><a href=/fire-building.html target="_blank">Fire Building</a></h2>
-        <h2><a href=/shelter-building.html target="_blank">Shelter Building</a></h2>
-        <h2><a href=/desert-survival.html target="_blank">Desert Survival</a></h2>
-        <h2><a href=/cold-weather-survival.html target="_blank">Survival in Cold Weather</a></h2>
-        <h2><a href=/temperate-forest-survival.html target="_blank">Survival in a Temperate Forest</a></h2>
-        <h2><a href=/high-mountain-survival.html target="_blank">Survival in High Mountains</a></h2>
-        <h2><a href=/privacy-policy.html target="_blank">Privacy Policy</a></h2>
+        <h2><a href="/pschology.html" target="_blank">Psychology</a></h2>
+        <h2><a href="/how-to-build-a-survival-kit.html" target="_blank">Survival Kit</a></h2>
+        <h2><a href="/survival-medicine.html" target="_blank">Survival Medicines</a></h2>
+        <h2><a href="/fire-building.html" target="_blank">Fire Building</a></h2>
+        <h2><a href="/shelter-building.html" target="_blank">Shelter Building</a></h2>
+        <h2><a href="/desert-survival.html" target="_blank">Desert Survival</a></h2>
+        <h2><a href="/cold-weather-survival.html" target="_blank">Survival in Cold Weather</a></h2>
+        <h2><a href="/temperate-forest-survival.html" target="_blank">Survival in a Temperate Forest</a></h2>
+        <h2><a href="/high-mountain-survival.html" target="_blank">Survival in High Mountains</a></h2>
+        <h2><a href="/privacy-policy.html" target="_blank">Privacy Policy</a></h2>
         
         
         <!-- Load external JavaScript -->
