--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <body>
 
         <h1>Home</h1>
-        <p>This site is still under development. YOu might see random things appear.</p>
-        <h2><a href="/Survival/pschology.html" target="_blank">Psychology</a></h2>
+        <p>This site is still under development. You might see random things appear.</p>
+        <h2><a href="/Survival/psychology.html" target="_blank">Psychology</a></h2>
         <h2><a href="/how-to-build-a-survival-kit.html" target="_blank">Survival Kit</a></h2>
         <h2><a href="/survival-medicine.html" target="_blank">Survival Medicines</a></h2>
         <h2><a href="/fire-building.html" target="_blank">Fire Building</a></h2>
@@ -52,4 +52,4 @@
         
     </body>
 
-</html> 
+</html>
