--- a/psychology/psychology.html
+++ b/psychology/psychology.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="psychology.css"
     <title>Psychology</title>
     <!--Google tag here-->
   </head>
