--- a/psychology/psychology.html
+++ b/psychology/psychology.html
@@ -3,7 +3,15 @@
   <head>
     <link rel="stylesheet" href="psychology.css"
     <title>Psychology</title>
-    <!--Google tag here-->
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-89YY3TFDS8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-89YY3TFDS8');
+</script>
   </head>
   <body>
     <h1>Hello</h1>
