--- a/index.html
+++ b/index.html
@@ -3,24 +3,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <title>Survival Site</title>
 
-        <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    
-    <!-- Cookie Banner -->
-    <link rel="stylesheet" href="cookiebanner.style.css">
-    <script src="cookiebanner.script.js"></script>
-    <style>
-        *{margin:0;padding:0;text-decoration:none;list-style:none;box-sizing:border-box;}
-    </style>
-    <script>
-        $(document).ready(function() {
-            cookieBanner.init();
-        });
-    </script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-89YY3TFDS8"></script>
 <script>
@@ -32,7 +19,11 @@
 </script>
     </head>
     <body>
-
+        <div id="cookieBanner" class="cookie-banner">
+            <p>This website uses cookies to ensure you get the best experience on our website. By using this site, you agree to our use of cookies.</p>
+            <button id="acceptAllCookiesBtn">Accept All Cookies</button>
+            <button id="declineCookiesBtn">Decline</button>
+        </div>
         <h1>Home</h1>
         <p>This site is still under development. You might see random things appear.</p>
         <h2><a href="/Survival/psychology/psychology.html" target="_blank">Psychology</a></h2>
