--- a/Topics/psychology.html
+++ b/Topics/psychology.html
@@ -3,10 +3,14 @@
 
 <head>
     <title>Psychology</title>
-    <link rel="stylesheet" href="psychology.css" <!-- Google tag (gtag.js) -->
+    <link rel="stylesheet" href="topics.css">
+        <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-89YY3TFDS8"></script>
     <script>
-        window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-89YY3TFDS8');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);
+         } gtag('js', new Date());
+        gtag('config', 'G-89YY3TFDS8');
     </script>
 </head>
 
