--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <section>
                 <h2>Survival Topics</h2>
                 <ul>
-                    <li><a href="/Topics/psychology/psychology.html" target="_blank">Psychology</a></li>
-                    <li><a href="/Topics/how-to-build-a-survival-kit.html" target="_blank">Survival Kit</a></li>
-                    <li><a href="/Topics/survival-medicine.html" target="_blank">Survival Medicines</a></li>
-                    <li><a href="/Topics/fire-building.html" target="_blank">Fire Building</a></li>
-                    <li><a href="/Topics/shelter-building.html" target="_blank">Shelter Building</a></li>
-                    <li><a href="/Topics/desert-survival.html" target="_blank">Desert Survival</a></li>
-                    <li><a href="/Topics/cold-weather-survival.html" target="_blank">Survival in Cold Weather</a></li>
-                    <li><a href="/Topics/temperate-forest-survival.html" target="_blank">Survival in a Temperate Forest</a></li>
-                    <li><a href="/Topics/high-mountain-survival.html" target="_blank">Survival in High Mountains</a></li>
+                    <li><a href="/Survival/Topics/psychology.html" target="_blank">Psychology</a></li>
+                    <li><a href="/Survival/Topics/how-to-build-a-survival-kit.html" target="_blank">Survival Kit</a></li>
+                    <li><a href="/Survival/Topics/survival-medicine.html" target="_blank">Survival Medicines</a></li>
+                    <li><a href="/Survival/Topics/fire-building.html" target="_blank">Fire Building</a></li>
+                    <li><a href="/Survival/Topics/shelter-building.html" target="_blank">Shelter Building</a></li>
+                    <li><a href="/Survival/Topics/desert-survival.html" target="_blank">Desert Survival</a></li>
+                    <li><a href="/Survival/Topics/cold-weather-survival.html" target="_blank">Survival in Cold Weather</a></li>
+                    <li><a href="/Survival/Topics/temperate-forest-survival.html" target="_blank">Survival in a Temperate Forest</a></li>
+                    <li><a href="/Survival/Topics/high-mountain-survival.html" target="_blank">Survival in High Mountains</a></li>
                 </ul>
             </section>
         </main>
