--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           gtag('config', 'G-89YY3TFDS8');
         </script>
     </head>
-    <body>
+    <body style="display: flex; flex-direction: column; min-height: 100vh;">
         <header>
             <h1>Home</h1>
             <p>This site is still under development. You might see random things appear.</p>
         </header>
-        <main>
+        <main style="flex: 1;">
             <section>
                 <h2>Survival Topics</h2>
                 <ul>
@@ -47,4 +47,3 @@
         
     </body>
 </html>
- 
