--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body style="display: flex; flex-direction: column; min-height: 100vh;">
         <header>
-            <h1>Home</h1>
+            <h1 id="header" onclick="changeColor()">Home</h1>
             <p>This site is still under development. You might see random things appear.</p>
         </header>
         <main style="flex: 1;">
