--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </footer>
         
         <!-- Load external JavaScript -->
-        <script src="scripts.js"></script>
+        <script src="script.js"></script>
         
     </body>
 </html>
