--- a/Topics/psychology.html
+++ b/Topics/psychology.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Psychology</title>
     <link rel="stylesheet" href="topics.css">
         <!-- Google tag (gtag.js) -->
