--- a/Topics/psychology.html
+++ b/Topics/psychology.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Psychology</title>
     <link rel="stylesheet" href="topics.css">
-        <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-89YY3TFDS8"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -18,20 +18,17 @@
 <body>
     <div id="dataContainer"></div>
     <h1>Hello</h1>
-       <script>
-        // Function to fetch and parse XML data
+    <script>
+        // Function to fetch and parse TXT data
         function fetchData() {
-            fetch('https://hotroos.github.io/Survival/Info/psychology.xml')
+            fetch('https://hotroos.github.io/Survival/Info/psychology.txt')
                 .then(response => response.text())
                 .then(data => {
-                    const parser = new DOMParser();
-                    const xmlDoc = parser.parseFromString(data, "text/xml");
-                    
-                    // Accessing data from XML
-                    const items = xmlDoc.getElementsByTagName("item");
+                    // Assuming each line in the txt file is a separate item
+                    const items = data.split('\n');
                     let output = "<ul>";
                     for (let i = 0; i < items.length; i++) {
-                        output += "<li>" + items[i].getElementsByTagName("title")[0].childNodes[0].nodeValue + "</li>";
+                        output += "<li>" + items[i] + "</li>";
                     }
                     output += "</ul>";
                     
@@ -39,7 +36,7 @@
                     document.getElementById("dataContainer").innerHTML = output;
                 })
                 .catch(error => {
-                    console.error('Error fetching XML data:', error);
+                    console.error('Error fetching TXT data:', error);
                 });
         }
 
