--- a/Topics/psychology.html
+++ b/Topics/psychology.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="topics.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-89YY3TFDS8"></script>
+    <style>
+        /* Add your desired font size and family here */
+        .custom-font {
+            font-size: 20px; /* Change this to your desired font size */
+            font-family: Arial, sans-serif; /* Change this to your desired font family */
+        }
+    </style>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);
@@ -17,7 +24,7 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <div id="dataContainer"></div>
+    <div id="dataContainer" class="custom-font"></div>
     <script>
         // Function to fetch and parse TXT data
         function fetchData() {
