--- a/Topics/psychology.html
+++ b/Topics/psychology.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-    <h1>Welcome to Psychology</h1>
+    <h1>Psychology</h1>
+    <h3>On this page, You will read about the psychology in Surviving</h3>
     <div id="dataContainer"></div>
     <script>
         window.dataLayer = window.dataLayer || [];
