--- a/Topics/survival-medicine.html
+++ b/Topics/survival-medicine.html
@@ -16,5 +16,19 @@
   </head>
   <body>
     <h1>Survival Medicine</h1>
+    <script>
+      function fetchData() {
+            fetch('https://hotroos.github.io/Survival/Info/survival-kit.txt')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById("dataContainer").innerText = data;
+                })
+                .catch(error => {
+                    console.error('Error fetching TXT data:', error);
+                });
+        }
+
+        window.onload = fetchData;
+    </script>
   </body>
 </html>
