--- a/Topics/how-to-build-a-survival-kit.html
+++ b/Topics/how-to-build-a-survival-kit.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <h1>Survival Kit Building</h1>
+   <div id="dataContainer"></div>
         <script>
       function fetchData() {
             fetch('https://hotroos.github.io/Survival/Info/survival-kit.txt')
