--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <title>Survival Site</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Survival Site</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <!-- Google Tag Manager -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-89YY3TFDS8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-89YY3TFDS8"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+      gtag('config', 'G-89YY3TFDS8');
+    </script>
+    <!-- End Google Tag Manager -->
+</head>
+<body>
+    <header class="container">
+        <h1 id="header" onclick="changeColor()">Home</h1>
+        <p>This site is still under development. You might see random things appear.</p>
+    </header>
 
-          gtag('config', 'G-89YY3TFDS8');
-        </script>
-    </head>
-    <body style="display: flex; flex-direction: column; min-height: 100vh;">
-        <header>
-            <h1 id="header" onclick="changeColor()">Home</h1>
-            <p>This site is still under development. You might see random things appear.</p>
-        </header>
-        <main style="flex: 1;">
-            <section>
-                <h2>Survival Topics</h2>
-                <ul>
-                    <li><a href="/Survival/Topics/psychology.html" target="_blank">Psychology</a></li>
-                    <li><a href="/Survival/Topics/how-to-build-a-survival-kit.html" target="_blank">Survival Kit</a></li>
-                    <li><a href="/Survival/Topics/survival-medicine.html" target="_blank">Survival Medicines</a></li>
-                    <li><a href="/Survival/Topics/fire-building.html" target="_blank">Fire Building</a></li>
-                    <li><a href="/Survival/Topics/shelter-building.html" target="_blank">Shelter Building</a></li>
-                    <li><a href="/Survival/Topics/desert-survival.html" target="_blank">Desert Survival</a></li>
-                    <li><a href="/Survival/Topics/cold-weather-survival.html" target="_blank">Survival in Cold Weather</a></li>
-            </section>
-        </main>
-        
-    </body>
+    <main class="container">
+        <section>
+            <h2>Survival Topics</h2>
+            <ul class="list-group">
+                <li class="list-group-item"><a href="/Survival/Topics/psychology.html" target="_blank">Psychology</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/how-to-build-a-survival-kit.html" target="_blank">Survival Kit</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/survival-medicine.html" target="_blank">Survival Medicines</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/fire-building.html" target="_blank">Fire Building</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/shelter-building.html" target="_blank">Shelter Building</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/desert-survival.html" target="_blank">Desert Survival</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/cold-weather-survival.html" target="_blank">Survival in Cold Weather</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <script>
+        function changeColor() {
+            // Your color change logic here
+        }
+    </script>
+</body>
 </html>
