--- a/index.html
+++ b/index.html
@@ -16,32 +16,67 @@
       gtag('config', 'G-89YY3TFDS8');
     </script>
     <!-- End Google Tag Manager -->
+    <style>
+		body {
+  			background-image: url('https://media.istockphoto.com/id/518275718/vector/seamless-vector-pattern-of-the-tourist-icons.jpg?s=612x612&w=0&k=20&c=WCuqkIPgKSkJhS98KmtMB4FGOwpyM16GbJu6SptoNLc=');
+		}
+        header {
+            background-color: #B8C66C;
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        h1:hover {
+            cursor: pointer;
+        }
+        section {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+        }
+        ul.list-group {
+            list-style-type: none;
+            padding: 0;
+            margin: 0; /* Added to remove default margin */
+        }
+        .list-group-item {
+            border: none;
+            padding: 10px 0;
+            border-bottom: 1px solid #ddd;
+        }
+        .list-group-item:last-child {
+            border-bottom: none;
+        }
+        a {
+            text-decoration: none;
+            color: #4CAF50;
+            transition: color 0.3s ease;
+        }
+        a:hover {
+            color: #2E8B57;
+        }
+    </style>
 </head>
 <body>
     <header class="container">
-        <h1 id="header" onclick="changeColor()">Home</h1>
-        <p>This site is still under development. You might see random things appear.</p>
+        <h1 id="header">Survival Guide</h1>
+        <p>Welcome to the wilderness, where every decision is a matter of survival.</p>
     </header>
 
     <main class="container">
         <section>
-            <h2>Survival Topics</h2>
+            <h2>Essential Survival Topics</h2>
             <ul class="list-group">
-                <li class="list-group-item"><a href="/Survival/Topics/psychology.html" target="_blank">Psychology</a></li>
-                <li class="list-group-item"><a href="/Survival/Topics/how-to-build-a-survival-kit.html" target="_blank">Survival Kit</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/psychology.html" target="_blank">Survival Psychology</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/how-to-build-a-survival-kit.html" target="_blank">Building Your Survival Kit</a></li>
                 <li class="list-group-item"><a href="/Survival/Topics/survival-medicine.html" target="_blank">Survival Medicines</a></li>
-                <li class="list-group-item"><a href="/Survival/Topics/fire-building.html" target="_blank">Fire Building</a></li>
-                <li class="list-group-item"><a href="/Survival/Topics/shelter-building.html" target="_blank">Shelter Building</a></li>
-                <li class="list-group-item"><a href="/Survival/Topics/desert-survival.html" target="_blank">Desert Survival</a></li>
-                <li class="list-group-item"><a href="/Survival/Topics/cold-weather-survival.html" target="_blank">Survival in Cold Weather</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/fire-building.html" target="_blank">Mastering Fire Building</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/shelter-building.html" target="_blank">Constructing Emergency Shelters</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/desert-survival.html" target="_blank">Surviving in the Desert</a></li>
+                <li class="list-group-item"><a href="/Survival/Topics/cold-weather-survival.html" target="_blank">Thriving in Cold Weather</a></li>
             </ul>
         </section>
     </main>
 
-    <script>
-        function changeColor() {
-            // Your color change logic here
-        }
-    </script>
 </body>
 </html>
