--- a/Topics/desert-survival.html
+++ b/Topics/desert-survival.html
@@ -15,8 +15,11 @@
     </script>
   </head>
   <body>
+    <header class="container">
     <h1>Desert Survival</h1>
+    </header>
       <div id="dataContainer"></div>
+        <main class="container">
     <script>
         function fetchData() {
             fetch('https://hotroos.github.io/Survival/Info/fire-building.txt')
@@ -31,5 +34,6 @@
 
         window.onload = fetchData;
     </script>
+        </main>
   </body>
 </html>
