--- a/Topics/psychology.html
+++ b/Topics/psychology.html
@@ -16,7 +16,7 @@
     </script>
 </head>
 
-<body>
+<body style="background-color: #FFF">
     <h1>Psychology</h1>
     <h3>On this page, You will read about the psychology in Surviving</h3>
     <div id="dataContainer"></div>
