--- a/Topics/psychology.html
+++ b/Topics/psychology.html
@@ -16,10 +16,10 @@
     </script>
 </head>
 
-<body style="background-color: #FFF">
+<body>
     <h1>Psychology</h1>
     <h3>On this page, You will read about the psychology in Surviving</h3>
-    <div id="dataContainer"></div>
+    <div id="dataContainer" style="background-color: #FFF"></div>
     <script>
         function fetchData() {
             fetch('https://hotroos.github.io/Survival/Info/psychology.txt')
